--- a/src/desktop/taskbar/taskbar.css
+++ b/src/desktop/taskbar/taskbar.css
@@ -1,9 +1,15 @@
-#taskbar{
+#taskbar-cont{
     width:100%;
     height:50px;
     position: absolute;
     bottom:0;
     z-index: 8790287;
+    display: flex;
+}
+#taskbar{
+    width:100%;
+    height:100%;
+    display: flex;
 }
 @media only screen and (max-width: 720px) {
     #taskbar{
