--- a/src/desktop/taskbar/time/time.css
+++ b/src/desktop/taskbar/time/time.css
@@ -3,7 +3,7 @@
     width:3%;
     float: right;
     color:white;
-    font-size:15px;
+    font-size:13px;
     background-color: black;
 }
 #time-cont:hover{
@@ -14,9 +14,10 @@
     top:5px;
 }
 #line-2{
+    margin-right: -20px;
     position: relative;
-    top:8px;
-    right:20px;
+    top:5px;
+    right:25px;
 }
 @media only screen and (max-width: 720px) {
     #time-cont{
