--- a/src/desktop/desktop.css
+++ b/src/desktop/desktop.css
@@ -11,3 +11,25 @@ body{
     
     /*background-image: url('../assests/bgtest.jpg')*/
 }
+
+#desktop .iconHolderDesktop
+{
+    display:flex;
+    flex:0 0 100px;
+    padding:20px;
+    width: 100px;
+    height:100px;
+    flex-direction: column;
+    color:white;
+    position: absolute;
+    z-index: 1;
+}
+#desktop .iconHolderDesktop:hover
+{
+    background-color:blue;
+    opacity:0.8;
+}
+#desktop .iconHolderDesktop img{
+    width:50px;
+    height:50px;
+}
